# 07-CMake-Learning

./: .gitignore  .gitmodules  LICENSE  README.txt  test.txt
01-Intro/: CMakeLists.txt  intro.cpp
02-trim/: CMakeLists.txt  trim.cpp
03-Libdemo/: CMakeLists.txt  libdemo.cpp  libdemo.h
04-Libusage/: CMakeLists.txt  main.cpp
05-Git-Modules/: CMakeLists.txt  main.cpp
lib/pkgconfig/: glfw3.pc
